--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
-      # Build the Docker image
+      # Build the Docker image in my fork
       - name: Build Docker image
         run: |
           docker build -t ghcr.io/luc14n/tower-defence-game:latest -f Dockerfile.app .
