--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - dockerimage # Trigger on pushes to the 'dockerimage' branch
+  workflow_dispatch: # Allow manual triggering of the workflow
 
 jobs:
   build-and-push:
